--- a/src/custom-assets/css/style.css
+++ b/src/custom-assets/css/style.css
@@ -12,29 +12,99 @@ body {
     border-bottom: 6px solid #49cc90;
 }
 
-.openapi-icon {
-    position: fixed;
-    z-index: 999;
-    background: #49cc90;
-    height: 5pc;
-    width: 5pc;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    border-radius: 100%;
-    box-shadow: 0px 0px 5px 0px #777;
-    right: 20px;
-    top: 20px;
-    transition: 0.5s;
-}
 
 .link-swagger {
     text-decoration-line: blink;
     color: black;
     font-family: sans-serif;
 }
-.openapi-icon:hover {
+
+.btn {
+    background: transparent;
+    border: 2px solid gray;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
+    color: #3b4151;
+    font-family: sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 5px 23px;
+    transition: all .3s;
+    margin: 3px;
+}
+
+.global-token {
+    background: #fff;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    margin: 5px 0;
+    width: 100%;
+    padding: 8px 10px;
+}
+.action-btns {
+    width: 15pc;
+    align-items: center;
+    display: flex;
+    place-content: space-between;
+}
+
+.global-token-container {
+    width: 297px;
+    float: right;
+    position: fixed;
+    z-index: 999;
+    background: #fff;
+    padding: 1pc 3pc 1pc 1pc;
+    box-shadow: 0px 0px 9px 0px #2a2a2a;
+    border-radius: 10px;
+    left: 45%;
+    right: 45%;
+    top: 30%;
+    display: none;
+}
+
+.btn:hover {
     transition: 0.5s;
-    background: gray;
+    background: #49cc90;
+}
+.openapi-nav {
+    background: #49cc90;
+    border-bottom: 3px solid #000;
+    color: #000;
+}
+
+ul.nav-ul {
+    line-height: 3pc;
+    margin: 0;
+    text-align: center;
+}
+
+a.link-swagger {
+    padding: 6px;
+    transition: 0.5s;
+    cursor: pointer;
+    background: #fff;
+    border: 2px solid;
+    border-radius: 6px;
+}
+
+a.link-swagger:hover {
+    background: darkgrey;
+    transition: 0.5s;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+li {
+    list-style: none;
+}
+
+div#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 998;
 }
