--- a/src/custom-assets/css/style.css
+++ b/src/custom-assets/css/style.css
@@ -112,3 +112,62 @@ div#overlay {
     z-index: 998;
 }
 
+
+
+.swagger-nav {
+    align-items: center;
+    width: 100%;
+    background: #49cc90;
+    line-height: 2pc;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0px 10px 0px;
+    border-bottom: 3px solid #000;
+}
+
+img.swagger-logo {
+    border: 3px solid #fff;
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+}
+
+.swagger-logo-cont {
+    display: flex;
+    align-items: center;
+    padding-left: 1pc;
+}
+
+span.swagger-logo-title {
+    font-family: sans-serif;
+    padding-left: 5px;
+    font-size: 25px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.version-select {
+-webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-size: 20px;
+    border: 2px solid #41444e;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .25);
+    color: #3b4151;
+    font-family: sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 5px 40px 5px 10px;
+    min-width: 7pc;
+}
+
+.versions-cont {
+    padding-right: 1pc;
+}
+
+label.version-label {
+    font-weight: bold;
+    font-family: sans-serif;
+    color: #fff;
+}
